k-nucleotide/Rust/target/release/build/crossbeam-utils-1faa413c82976152/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/cc66ad468955717ab92600c770da8c1601a4ff33/library/core/src/sync/atomic.rs:2956:1
 ::: /rustc/cc66ad468955717ab92600c770da8c1601a4ff33/library/core/src/sync/atomic.rs:2972:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
